--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "i5ting_toc",
+  "name": "md_toc",
   "version": "1.1.5",
   "description": "tocmd.npm:a npm wrapper of i5ting_ztree_toc",
   "keywords": [
@@ -35,7 +35,7 @@
     "commander": "^2.5.0",
     "config": "^1.7.0",
     "handlebars": "^2.0.0",
-    "marked": "^0.3.2",
+    "marked": "^2.1.3",
     "object-assign": "^1.0.0",
     "open": "0.0.5",
     "shelljs": "^0.3.0"
